# prod_esp32_playground

./: .clang-format  .gitignore  .prettierrc  CHANGELOG.md  README.md
.devcontainer/: .bash_aliases  Dockerfile  devcontainer.json
examples/dtf_simple/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/dtf_simple/main/: idf_component.yml  main.cpp
examples/factory_floor_cli/: CMakeLists.txt  README.md  model_programmer.py
examples/factory_floor_cli/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/including_local_components/: CMakeLists.txt  sdkconfig.defaults
examples/including_local_components/main/: idf_component.yml  main.cpp
examples/mcp_server/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/mcp_server/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/minimal_build/: CMakeLists.txt  README.md
examples/minimal_build/main/: main.cpp
examples/ota_testbed/: CMakeLists.txt  partitions.csv
examples/ota_testbed/front/info-app/: index.html  package-lock.json  package.json
examples/ota_testbed/front/info-app/src/: App.vue
examples/ota_testbed/front/info-app/src/components/: MemoryChart.vue
examples/ota_testbed/front/info-app/src/composables/: useUptime.js
examples/ota_testbed/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp  rest_server.c
examples/qemu_with_debug/: CMakeLists.txt  README.md
examples/qemu_with_debug/main/: main.cpp
examples/qemu_with_internet/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/qemu_with_internet/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/shared_components/mcp_server/: CMakeLists.txt  README.md
examples/shared_components/mcp_server/include/: mcp_protocol.h  mcp_schema.h  mcp_server.h  mcp_tool.h  mcp_transport.h  mcp_types.h
examples/shared_components/mcp_server/src/: mcp_protocol.c  mcp_schema.c  mcp_server.c  mcp_tool.c  mcp_transport.c
examples/shared_components/mcp_server/transports/: mcp_transport_http.c  mcp_transport_http.h
examples/shared_components/qemu_internet/: CMakeLists.txt  README.md  qemu_internet.c
examples/shared_components/qemu_internet/include/: qemu_internet.h
examples/shared_components/simple_cli/: CMakeLists.txt  README.md  idf_component.yml  simple_cli.cpp
examples/shared_components/simple_cli/include/: simple_cli.h
examples/shared_components/wifi_connect/: CMakeLists.txt  Kconfig  wifi_connect.c
examples/shared_components/wifi_connect/include/: wifi_connect.h
examples/simple-cli/: CMakeLists.txt  README.md
examples/simple-cli/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/system_function_wrapper/: CMakeLists.txt  README.md
examples/system_function_wrapper/main/: CMakeLists.txt  main.cpp
